# planining-agent

./: README.md  pyproject.toml
examples/: search_cli.py
src/agent_ai/core/: logging.py  messages.py  state.py
src/agent_ai/llm/: base.py  dummy.py  gemini.py  openai_stub.py
src/agent_ai/memory/: base.py  in_memory.py
src/agent_ai/reasoning/: policies.py  react.py
src/agent_ai/runtime/: agent_runner.py
src/agent_ai/tools/: base.py  registry.py
src/agent_ai/tools/builtin/: calculator.py  local_search.py  web_search_stub.py
tests/: test_calculator.py  test_react_dummy.py
