[project]
name = "agent-ai"
version = "0.1.0"
requires-python = ">=3.10"
description = "Tool-using Agent: search + reasoning"
readme = "README.md"
authors = [{ name = "Your Team" }]
dependencies = [
  "pydantic>=2.5",
  "typer>=0.12",
  "httpx>=0.27",
  "rich>=13.7"
]

[tool.pyright]
pythonVersion = "3.10"

[tool.ruff]
line-length = 100
