[project]
name = "agent-ai"
version = "0.1.0"
requires-python = ">=3.10"
description = "Tool-using Agent: search + reasoning"
readme = "README.md"
authors = [{ name = "Your Team" }]
dependencies = [
  "pydantic>=2.5",
  "typer>=0.12",
  "httpx>=0.27",
  "rich>=13.7",
  "google-generativeai>=0.8.5",
]

[tool.pyright]
pythonVersion = "3.10"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"] 
include = ["agent_ai*"]  
# exclude = ["mypackage.tests*"]
namespaces = true 

[tool.uv.sources]
agent_ai = { workspace = true }

[dependency-groups]
dev = [
  "agent_ai"
]
